--- a/scss/sections/_project.scss
+++ b/scss/sections/_project.scss
@@ -1,9 +1,10 @@
 @use "../component/variables" as *;
 .project {
   max-width: 100%;
+  height: 100%;
   padding: 0 18%;
   background-color: $primary;
-  padding-bottom: 4rem;
+  padding-bottom: 4rem !important;
 }
 .heading-line {
   display: flex;
@@ -52,11 +53,13 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  cursor: pointer;
 }
 
 .box-project:hover {
-  transform: translateY(-10px);
+  transform: scale(1.1) !important;
   transition: 0.5s all ease;
+  box-shadow: 0px 0.5px 3px rgb(3, 201, 136);
 }
 .box-project h2 {
   font-size: 1.2rem;
@@ -111,5 +114,93 @@
 @media (max-width: 1278px) {
   .project {
     padding: 0 8%;
+  }
+  .heading-line h1 {
+    font-size: 3.6;
+  }
+}
+
+@media (max-width: 988px) {
+  .box-project {
+    max-width: 200px;
+    min-height: 300px;
+  }
+  .heading-line h1 {
+    font-size: 3.4rem;
+  }
+}
+@media (max-width: 845px) {
+  .box-project {
+    max-width: 180px;
+    min-height: 300px;
+  }
+  .heading-line h1 {
+    font-size: 3.2rem;
+  }
+}
+@media (max-width: 774px) {
+  .heading-line h1 {
+    font-size: 3rem;
+  }
+  .box-project {
+    max-width: 250px;
+    min-height: 310px;
+  }
+  .box-project p {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 668px) {
+  .heading-line h1 {
+    font-size: 3rem;
+  }
+  .box-project {
+    max-width: 220px;
+    min-height: 300px;
+  }
+}
+@media (max-width: 603px) {
+  .heading-line h1 {
+    font-size: 2.4rem;
+  }
+  .heading-line p {
+    font-size: 0.9rem;
+  }
+  .box-project {
+    max-width: 210px;
+    min-height: 300px;
+  }
+}
+@media (max-width: 579px) {
+  .heading-line h1 {
+    font-size: 2.4rem;
+  }
+  .heading-line p {
+    font-size: 0.8rem;
+  }
+  .box-project {
+    max-width: 190px;
+    min-height: 300px;
+  }
+}
+@media (max-width: 532px) {
+  .heading-line h1 {
+    font-size: 2rem;
+  }
+  .heading-line p {
+    font-size: 0.8rem;
+  }
+  .box-project {
+    max-width: 320px;
+    min-height: 300px;
+  }
+  .box-project p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 460px) {
+  .heading-line p {
+    font-size: 0.6rem;
   }
 }
