--- a/scss/sections/_tech.scss
+++ b/scss/sections/_tech.scss
@@ -7,7 +7,6 @@
 }
 .tech-box {
   margin-top: 3rem;
-  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -19,7 +18,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-right: 1rem;
 }
 .tech-item i {
   font-size: 4rem;
@@ -27,10 +25,26 @@
   display: block;
   text-align: center;
 }
+
 .tech-item h2 {
   font-size: 1rem;
   font-weight: 400;
   display: block;
   text-align: center;
   color: $text;
+}
+@media (max-width: 1020px) {
+  .tech {
+    padding: 1.4rem 8%;
+  }
+}
+@media (max-width: 973px) {
+  .tech-item i {
+    font-size: 3.4rem;
+  }
+}
+@media (max-width: 713px) {
+  .tech-item i {
+    font-size: 3rem;
+  }
 }
